<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundo"
    android:orientation="vertical"
    tools:context=".Login_Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apps_login"
            android:textColor="@color/corFonte"
            android:textSize="40sp" />

        <EditText
            android:layout_marginTop="50dp"
            android:textColorHint="@color/corFonte"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/barra"
            android:padding="10dp"
            android:drawableRight="@drawable/ic_person"
            android:hint="@string/username" />

        <EditText
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:textColorHint="@color/corFonte"
            android:layout_height="wrap_content"
            android:background="@drawable/barra"
            android:padding="10dp"
            android:drawableRight="@drawable/ic_lock"
            android:hint="@string/password" />

        <Button
            android:layout_marginTop="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/botao"
            android:text="@string/sign_in"
            android:textAllCaps="false" />

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:textSize="18sp"
            android:textColor="@color/corFonte" />

        <LinearLayout
            android:layout_marginTop="150dp"
            android:layout_width="match_parent"
            android:gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account"
                android:textSize="18sp"
                android:textColor="@color/corFonte" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_new"
                android:layout_marginLeft="10dp"
                android:textSize="18sp"
                android:textColor="@color/corFonte" />

        </LinearLayout>


    </LinearLayout>

</LinearLayout>