<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundo"
    android:orientation="vertical"
    tools:context=".Login_Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apps_login"
            android:textColor="@color/corFonte"
            android:textSize="40sp" />

        <EditText
            android:layout_width="match_parent"
            android:textColorHint="@color/corFonte"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@drawable/barra"
            android:drawableRight="@drawable/ic_person"
            android:hint="@string/username"
            android:padding="10dp" />

        <EditText
            android:layout_width="match_parent"
            android:textColorHint="@color/corFonte"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/barra"
            android:drawableRight="@drawable/ic_email"
            android:hint="@string/email"
            android:padding="10dp" />

        <EditText
            android:layout_width="match_parent"
            android:textColorHint="@color/corFonte"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/barra"
            android:drawableRight="@drawable/ic_lock"
            android:hint="@string/password"
            android:padding="10dp" />

        <EditText
            android:layout_width="match_parent"
            android:textColorHint="@color/corFonte"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/barra"
            android:drawableRight="@drawable/ic_lock"
            android:hint="@string/replace_password"
            android:padding="10dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@drawable/botao"
            android:text="@string/sign_up"
            android:textAllCaps="false" />


    </LinearLayout>

</LinearLayout>